re PR rtl-optimization/27335 (ICE in get_loop_body)

PR rtl-optimization/27335
	* loop-unroll.c (peel_loops_completely): Use loops->parray to walk the
	loops.

	* gcc.dg/pr27335.c: New test.

From-SVN: r113747